# nexus-a2a

./: .gitignore  README.md  main.py  pyproject.toml
nexus_a2a/: __init__.py  decorators.py  network.py
nexus_a2a/adapters/: autogen.py  base.py  crewai.py  google_adk.py  langgraph.py
nexus_a2a/core/: orchestrator.py  registry.py  task_manager.py
nexus_a2a/models/: agent.py  task.py
nexus_a2a/security/: auth.py  rate_limiter.py  trust.py  validator.py
nexus_a2a/storage/: audit_logger.py  metrics.py  redis_store.py  task_store.py
nexus_a2a/transport/: http_client.py  sse.py  webhook.py
tests/: test_decorator.py  test_models.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py
